hphp/hack/test/typecheck/typing_fail_instance_of.php.exp
ERROR: File "typing_fail_instance_of.php", line 40, characters 10-11:
Typing error (Typing[4429])
  File "typing_fail_instance_of.php", line 39, characters 14-15:
  Expected `?num`
  File "typing_fail_instance_of.php", line 39, characters 14-15:
  But got `(not A & not B)`
WARN: File "typing_fail_instance_of.php", line 29, characters 7-13:
This `is` check is always `false`. The expression on the left has type `A` which shares no values with `B`. (Warn[12002])
WARN: File "typing_fail_instance_of.php", line 39, characters 14-15:
This is a sketchy null check.
It detects nulls, but it will also detect many other falsy values, including `false`, `0`, `0.0`, `""`, `"0"`, empty Containers, and more.
If you want to test for them, please consider doing so explicitly.
If you only meant to test for `null`, use `$x is nonnull` instead (Warn[12003])
